--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.7.6"
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ElasticArrays = "fdbdab4c-e67f-52f5-8c3f-e7b388dad3d4"
 EmpiricalDistributions = "0bbb1fad-0f24-45fe-94a4-415852c5cc3b"
@@ -15,10 +16,12 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
+ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 
 [compat]
 ArgCheck = "1, 2"
 ArraysOfArrays = "0.5"
+ChainRulesCore = "0.9"
 Distributions = "0.21, 0.22, 0.23, 0.24"
 ElasticArrays = "1.0"
 EmpiricalDistributions = "0.1, 0.2, 0.3"
@@ -27,11 +30,13 @@ IntervalSets = "0.3, 0.4, 0.5"
 StatsBase = "0.32, 0.33"
 Tables = "0.2, 1"
 TypedTables = "1.2"
+ZygoteRules = "0.2"
 julia = "1"
 
 [extras]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["LinearAlgebra", "Test"]
+test = ["LinearAlgebra", "Test", "Zygote"]
